Fixed a few layout issues. Version search

--- a/style.css
+++ b/style.css
@@ -9,6 +9,22 @@
 	--default-color: #FFFFFF
 }
 
+::-webkit-scrollbar {
+	width: calc(var(--global-scale) * 6px);
+	height: calc(var(--global-scale) * 6px);
+}
+
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-track {
+	background: #000000;
+}
+
+::-webkit-scrollbar-thumb {
+	height: calc(var(--global-scale) * 32px);
+	box-shadow: inset calc(var(--global-scale) * -1px) calc(var(--global-scale) * -1px) 0 0 #808080;
+	background: #C0C0C0;
+}
+
 a {
 	text-decoration: none;
 }
@@ -23,19 +39,19 @@ body {
 }
 
 @media (min-width: 1440px){
-    body {
+    :root {
 		--global-scale: 4;
     }
 }
 
 @media (max-width: 1280px){
-    body {
+    :root {
 		--global-scale: 3;
     }
 }
 
 @media (max-width: 1080px){
-    body {
+    :root {
 		--global-scale: 2;
     }
 }
@@ -44,22 +60,25 @@ body {
 		--global-scale: 1;
     }
 }
-div.fgbottom { bottom: 0; }
-div.fgtop { top: 0; }
 
-div.scrollitem,
-.center {
+.grid {
+	display: grid;
+}
+
+div.scrollitem {
 	text-align: center;
 	margin-right: auto;
 	margin-left: auto;
 }
 
 div.scrollcontent {
-    padding-top: calc(var(--local-scale) * 32px);
-    padding-bottom: calc(var(--local-scale) * 32px);
+	overflow-y: auto;
+	height: auto;
 }
 
 div.scrollitem {
+	display: grid;
+	align-content: center;
 	width: calc(var(--local-scale) * 200px);
 	height: calc(var(--local-scale) * 20px);
     padding: calc(var(--local-scale) * 5px) calc(var(--local-scale) * 4px);
@@ -90,7 +109,7 @@ div.fgbottom,
 }
 div.fgtop,
 div.fgbottom {
-	position: fixed;
+	/*position: fixed;*/
 	width: 100%;
 	z-index:10;
 	height: calc(var(--local-scale) * 32px);
@@ -127,7 +146,6 @@ a,
 .mctextfield,
 .mcbuttontext {
 	outline:none;
-	width: fit-content;
 	--local-scale: calc(var(--scale, 1) * var(--global-scale));
 	--local-color: var(--text-color, var(--default-color));
 	--local-shadow: var(--shadow-color, var(--default-shadow));
@@ -140,10 +158,20 @@ a,
 	color: var(--local-color);
 }
 
+ul {
+    padding-inline-start: calc(16px * var(--local-scale));
+}
+
+::marker {
+	letter-spacing: calc(4px * var(--local-scale));
+	content: "\2022";
+}
+
 h1 { --scale: 2;}
 
 h1,
 h2 {
+	margin: calc(8px * var(--local-scale));
     font-weight: 100;
 }
 
@@ -165,7 +193,10 @@ h2 {
 .mcslider,
 .mcbuttontext {
 	display: block;
-	margin:calc(var(--local-scale) * 4px) auto;
+	margin-top:calc(var(--local-scale) * 6px);
+	margin-bottom:calc(var(--local-scale) * 6px);
+	margin-right:calc(var(--local-scale) * 6px);
+	margin-left:calc(var(--local-scale) * 6px);
     box-sizing: border-box;
     padding: calc(var(--local-scale) * 6px) 0px;
     text-align: center;
@@ -209,8 +240,11 @@ h2 {
 
 
 /* Text colors */
-a:hover, a:focus { --shadow-color: #00002A; --text-color: #0000AA; }
+
+a.res { --shadow-color: #153F15; --text-color: #55FF55; }
+a.res:hover, a.res:focus { --shadow-color: #002A00; --text-color: #00AA00; }
 a { --shadow-color: #15153F; --text-color: #5555FF; }
+a:hover, a:focus { --shadow-color: #00002A; --text-color: #0000AA; }
 h1, h2 { --shadow-color: #3F3F3F; --text-color: #FFFFFF; }
 
 .mcbutton_disabled,
@@ -273,6 +307,33 @@ h1, h2 { --shadow-color: #3F3F3F; --text-color: #FFFFFF; }
 	  animation-timing-function: ease-out;
 	  transform: rotate(-15deg) translateX(calc(var(--local-scale) * 30px)) scale(0.9);
 	  }
+}
+
+.center {
+	margin-right: auto;
+	margin-left: auto;
+}
+.center:not(.mctextfield) {
+	text-align: center;
+}
+
+.center_vertical {
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
+.flex,
+.flex_space {
+	display: flex;
+	column-gap: calc(var(--local-scale) * 6px);
+	align-content: center;
+	align-items: center;
+}
+.flex_space {
+	justify-content: space-between;
+}
+.minwidth {
+	width: fit-content;
 }
 
 .menucontainer{
